Title Fragment setup gameWon and gameOver fragments added

--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,10 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
 }
 
+ext {
+    navigationVersion = "2.4.2"
+}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
